--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@fontsource-variable/overpass": "^5.0.19",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
+    "@redux-devtools/extension": "^3.3.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
